# rust-bench

./: README.md
rust-bench/: Cargo.toml  README.md  build.rs  ffi.c
rust-bench/benches/: extend_safe.rs  extend_unsafe.rs  jsi_wrapper.rs  my_benchmark.rs  wrapper_ffi.rs  wrapper_rust.rs  wrapper_with_jsi.rs  wrapper_without_jsi.rs
rust-bench/src/: main.rs
