[package]
name = "rust-bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "wrapper_with_jsi"
harness = false

[[bench]]
name = "wrapper_without_jsi"
harness = false

[[bench]]
name = "extend_unsafe"
harness = false

[[bench]]
name = "extend_safe"
harness = false

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"