[package]
name = "rust-bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "wrapper_ffi"
harness = false

[[bench]]
name = "wrapper_rust"
harness = false

[[bench]]
name = "extend_unsafe"
harness = false

[[bench]]
name = "extend_safe"
harness = false

[profile.release]
lto = true

[dependencies]
libc = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"